@@ -154,6 +154,9 @@ C-API
 Library
 -------
 
+- logging: Added optional `secure` parameter to SMTPHandler, to enable use of
+  TLS with authentication credentials.
+
 - Issue #1923: Fixed the removal of meaningful spaces when PKG-INFO is 
   generated in Distutils. Patch by Stephen Emslie.
 
